--- a/src/default.scss
+++ b/src/default.scss
@@ -9,8 +9,25 @@ body {
     margin: 0;
 }
 
-* {
+* , ::before, ::after {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1;
+}
+
+a {
+    text-decoration: none;
+}
+
+a, a:hover {
+    -webkit-transition: all .4s ease-in-out;
+    -moz-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
 }
