Commented out unnecessary code.

--- a/src/default.scss
+++ b/src/default.scss
@@ -33,11 +33,11 @@ a {
     cursor: pointer;
 }
 
-a, a:hover {
-    -webkit-transition: all .4s ease-in-out;
-    -moz-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-}
+// a, a:hover {
+//     -webkit-transition: all .4s ease-in-out;
+//     -moz-transition: all .4s ease-in-out;
+//     transition: all .4s ease-in-out;
+// }
 
 .main {
     width: 100%;
