--- a/src/components/Directory/styles.scss
+++ b/src/components/Directory/styles.scss
@@ -4,8 +4,9 @@
         display: inline-block;
         width: 100%;
         height:100%;
-        padding-left: 5%;
-        padding-right: 5%;
+        // padding-left: 5%;
+        // padding-right: 5%;
+
         .item {
             position: relative;
             width: 50%;
