--- a/src/default.scss
+++ b/src/default.scss
@@ -11,7 +11,8 @@ body {
 html,
 body,
 #root,
-.App {
+.App,
+.fullHeight {
     height: 100%;
 }
 
@@ -41,7 +42,8 @@ a {
 
 .main {
     width: 100%;
-    height: calc(100% - 10rem);
+    // height: calc(100% - 10rem);
+    min-height: calc(100vh - 5rem);
     max-width: 1450px;
     padding: 0 10px;
     margin: 0 auto;
