--- a/NadaratakClient/src/components/Header/styles.scss
+++ b/NadaratakClient/src/components/Header/styles.scss
@@ -35,14 +35,28 @@
             }
 
             li {
+                display: inline-block;
                 list-style-type: none;
+                margin-right: 1em;
+
+                &:last-child {
+                    margin-right: 0;
+                }
 
                 a {
+                    padding: 7px;
                     font-size: 1.8rem;
                     line-height: 1;
                     color: black;
                     text-decoration: none;
                     text-transform: uppercase;
+                    border: 2px solid #4CAF50;
+                    border-radius: 8px;
+                }
+                
+                a:hover {
+                    background-color: #4CAF50;
+                    color: white;
                 }
             }
         }
