--- a/NadaratakClient/src/components/Header/styles.scss
+++ b/NadaratakClient/src/components/Header/styles.scss
@@ -58,6 +58,22 @@
                     background-color: #4CAF50;
                     color: white;
                 }
+
+                span {
+                    padding: 7px;
+                    font-size: 1.8rem;
+                    line-height: 1;
+                    color: black;
+                    text-decoration: none;
+                    text-transform: uppercase;
+                    border: 2px solid red;
+                    border-radius: 8px;
+                    cursor: pointer;
+                }
+                span:hover{
+                    background-color: red;
+                    color: white;
+                }
             }
         }
     }
