--- a/NadaratakClient/src/components/forms/Button/styles.scss
+++ b/NadaratakClient/src/components/forms/Button/styles.scss
@@ -7,7 +7,7 @@
     text-transform: uppercase;
     color: white;
     background: #4CAF50;
-    padding: 1rem 0;
+    padding: 1rem 1rem;
     margin: 0 auto;
     border: none;
     outline: none;
